# blog_os

./: Cargo.toml  shell.nix
.cargo/: config.toml
src/: allocator.rs  gdt.rs  idt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  dummy.rs  fixed_size_block.rs  linked_list.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
