[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"


# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = {version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
lazy_static = {version = "1.0", features=["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
bit_field = "0.10.2"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.10.5"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
